# linc

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  build.bat
src/: CMakeLists.txt  pdns.c  pdns.h  pdns_test.cpp  phttp.c  phttp_test.cpp
src/client/: client_base.c  client_base_protected.h  default_client.c  default_client_test.cpp
src/request/: default_request.c  default_request.h  default_request_test.cpp  http_method_request.c  http_method_request_test.cpp  request_base.c  request_base.h  request_base_protected.h
src/responder/: default_responder.c  default_responder.h  default_responder_test.cpp  responder_base.c  responder_base_protected.h
src/response/: default_response.c  default_response.h  default_response_test.cpp  response_base.c  response_base.h  response_base_protected.h  response_base_test.cpp  simple_response.c  simple_response.h  simple_response_test.cpp
src/router/: default_router.c  default_router_test.cpp  router_base.c  router_base.h  router_base_protected.h
src/server/: default_server.c  default_server_test.cpp  server_base.c  server_base.h  server_base_protected.h
src/util/: name_resolution_helper.c  name_resolution_helper.h
v1/: client.h  default_client.h  default_router.h  default_server.h  handler.h  http_method_request.h  phttp.h  phttp_status_code.h  request.h  responder.h  response.h  router.h  server.h
